Fix service executor shutdown on interrupt.